Unsaved baked image cannot be used in node editors. #42928

Closed
opened 2014-12-17 07:04:29 +01:00 by Leon Cheung · 17 comments
Member

System Information
Win8.1 64bit | GTX680

Blender Version
Broken: 2.72.2 409043c

Short description of error
When trying to use the baked image within Blender, say, using it in Node editor, it just turns back to the initial look.

Exact steps for others to reproduce the error

  1. Create a blank image;
  2. Bake the default cube using this image;
  3. After baking, try using it in Node editor.

PS: Perhaps similar issue to this one? https://developer.blender.org/T42008 FYI. Thanks.

**System Information** Win8.1 64bit | GTX680 **Blender Version** Broken: 2.72.2 409043c **Short description of error** When trying to use the baked image within Blender, say, using it in Node editor, it just turns back to the initial look. **Exact steps for others to reproduce the error** 1. Create a blank image; 2. Bake the default cube using this image; 3. After baking, try using it in Node editor. PS: Perhaps similar issue to this one? https://developer.blender.org/T42008 FYI. Thanks.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

I can't reproduce this. Please attach a test file, this could well depend on specifics such as which node type you use, which render engine etc.

Have you tried this with a recent build from https://builder.blender.org ? Although i can't reproduce it with 2.72 either ...

I can't reproduce this. Please attach a test file, this could well depend on specifics such as which node type you use, which render engine etc. Have you tried this with a recent build from https://builder.blender.org ? Although i can't reproduce it with 2.72 either ...
Author
Member

I don't think a test file would help, because if I make a test file, the image has to be saved, but the problem only occurs for UNSAVED image... I think I may try to make a screencast to show it better. asap.

I don't think a test file would help, because if I make a test file, the image has to be saved, but the problem only occurs for UNSAVED image... I think I may try to make a screencast to show it better. asap.
Author
Member

@LukasTonne, please see the screencast , hope it helps.

@LukasTonne, please see [the screencast ](http://youtu.be/jwKIfqfWj48), hope it helps.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Mhh, seems to me the issue appears after using drag & drop. Looks like it's using the original image which causes the generated one to be overwritten :/

Mhh, seems to me the issue appears after using drag & drop. Looks like it's using the original image which causes the generated one to be overwritten :/

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

This issue is very similar to other issues such as #41598 or #41762. Basically any operation that clears the caches of an image will cause regeneration from a file or in the case of a generated image, flood filling with the generated value.

This issue is very similar to other issues such as #41598 or #41762. Basically any operation that clears the caches of an image will cause regeneration from a file or in the case of a generated image, flood filling with the generated value.

I do have a patch that explicitly creates a file when we generate an image instead, but it might be a bit of a controversial change. 0001-Add-a-new-generated-image-type-that-is-used-to-save-.patch

I do have a patch that explicitly creates a file when we generate an image instead, but it might be a bit of a controversial change. [0001-Add-a-new-generated-image-type-that-is-used-to-save-.patch](https://archive.blender.org/developer/F132828/0001-Add-a-new-generated-image-type-that-is-used-to-save-.patch)
Member

@Psy-Fi, why not save it in /temp/ by default?
Anyway, not sure if it's worth having two reports open that have the same root (event though the symptom is different)?

@Psy-Fi, why not save it in `/temp/` by default? Anyway, not sure if it's worth having two reports open that have the same root (event though the symptom is different)?

Added subscriber: @Sergey

Added subscriber: @Sergey

@Psy-Fi, i'm not really a fan of that patch. The existing pipeline is to be revisited and cleaned up where needed. The patch just adds extra confusion.

@Psy-Fi, i'm not really a fan of that patch. The existing pipeline is to be revisited and cleaned up where needed. The patch just adds extra confusion.

This issue was referenced by 35f153cdc3

This issue was referenced by 35f153cdc3f04dbfc2752b818aba09b6c844364a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 35f153cdc3.

Closed by commit 35f153cdc3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42928
No description provided.