Fix T42928: Drag-drop of generated files to compo reloads them, loosing edits

Origins of this issue goes back to T33402, where compo wasn't sure what kind
of image it is working with (compo should know if it's multilayer or regular
image).

Now we only reload images when dar-dropping from outside of blender.